[project]
name = "comfyui-ResolutionAndAspectRatio"
version = "1.0.0"
description = "ComfyUI node that converts megapixels + aspect ratio into width/height, with prompt-based ratio detection and randomization."
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.urls]
Repository = "https://github.com/dawncreatescode/comfyui-ResolutionAndAspectRatio"
Issues = "https://github.com/dawncreatescode/comfyui-ResolutionAndAspectRatio/issues"

[tool.comfy]
PublisherId = "dawncreatescode"
DisplayName = "Smart Aspect Ratio"
Icon = ""
Tags = ["resolution", "aspect ratio", "utility", "dimensions"]
